--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
     build:
         name: Build & Release
         runs-on: macos-latest # want to release iOS version too
+        permissions:
+          contents: write
         steps:
             - name: Checkout
               uses: actions/checkout@v3
