--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,22 @@ jobs:
               with:
                     flutter-version: '3.27.1'
                     channel: 'stable'
+            - name: Install FlutterFire CLI
+              run: |
+                dart pub global activate flutterfire_cli
+            - name: Setup firebase config
+              run: |
+                echo "${{ secrets.FIREBASE_JSON_BASE64 }}" | base64 -d > firebase.json
+                echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 -d > android\app\google-services.json
+                echo "${{ secrets.FIREBASE_OPTIONS_DART_BASE64 }}" | base64 -d > lib\firebase_options.dart
+                echo "${{ secrets.STORAGE_RULES_BASE64 }}" | base64 -d > storage.rules
             - name: Install dependencies
               run: flutter pub get
-            # TODO: add decode keystore step
+            # TODO: Add decode keystore step
+            - name: Run FlutterFire CLI
+              run: flutterfire configure
+              env:
+                FIREBASE_TOKEN: ${{ secrets.SERVICE_ACCOUNT_CREDENTIALS_JSON }}
             - name: build APK
               run: flutter build apk --release
             - name: build AAB
