--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   shared_preferences: ^2.5.3
+  firebase_core: ^3.13.0
+  firebase: ^9.0.3
 
 dev_dependencies:
   flutter_test:
