Add working (in debug) google auth + appcheck, writing to firestore fails with insufficient permission.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,7 +12,6 @@ android {
     namespace = "com.mitlabence.dedida"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
-
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
@@ -31,6 +30,7 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        minSdkVersion 23 // firebase_auth plugin requires it
     }
 
     buildTypes {
