--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   shared_preferences: ^2.5.3
   firebase_core: ^3.13.0
   firebase: ^9.0.3
+  cloud_firestore: ^5.6.6
+  google_sign_in: ^6.3.0
+  firebase_auth: ^5.5.2
+  firebase_app_check: ^0.3.2+5
 
 dev_dependencies:
   flutter_test:
