--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,12 @@ name: Build
 on:
     push:
         branches:
+            - main
             - dev
             - test
     pull_request:
         branches:
+            - main
             - dev
             - test
 jobs:
