--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,15 +35,15 @@ jobs:
                 dart pub global activate flutterfire_cli
             - name: Debug Workspace
               run: |
-                ls -R /Users/runner/work/dedida/dedida
+                echo "GITHUB_WORKSPACE is: $GITHUB_WORKSPACE"
+                ls -R $GITHUB_WORKSPACE
                 pwd
-                ls -l
             - name: Setup firebase config
               run: |
-                echo "${{ secrets.FIREBASE_JSON_BASE64 }}" | base64 -d > \Users\runner\work\dedida\dedida\firebase.json
-                echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 -d > \Users\runner\work\dedida\dedida\android\app\google-services.json
-                echo "${{ secrets.FIREBASE_OPTIONS_DART_BASE64 }}" | base64 -d > \Users\runner\work\dedida\dedida\lib\firebase_options.dart
-                echo "${{ secrets.STORAGE_RULES_BASE64 }}" | base64 -d > \Users\runner\work\dedida\dedida\storage.rules
+                echo "${{ secrets.FIREBASE_JSON_BASE64 }}" | base64 -d >  $GITHUB_WORKSPACE\dedida\firebase.json
+                echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 -d >  $GITHUB_WORKSPACE\dedida\android\app\google-services.json
+                echo "${{ secrets.FIREBASE_OPTIONS_DART_BASE64 }}" | base64 -d >  $GITHUB_WORKSPACE\dedida\lib\firebase_options.dart
+                echo "${{ secrets.STORAGE_RULES_BASE64 }}" | base64 -d >  $GITHUB_WORKSPACE\dedida\storage.rules
             - name: Install dependencies
               run: flutter pub get
             # TODO: Add decode keystore step
