--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,19 +33,20 @@ jobs:
             - name: Install FlutterFire CLI
               run: |
                 dart pub global activate flutterfire_cli
-            - name: Debug Workspace
-              run: |
-                echo "GITHUB_WORKSPACE is: $GITHUB_WORKSPACE"
-                ls -R $GITHUB_WORKSPACE
-                pwd
             - name: Setup firebase config
               run: |
                 echo "${{ secrets.FIREBASE_JSON_BASE64 }}" | base64 -d >  $GITHUB_WORKSPACE\firebase.json
                 echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 -d >  $GITHUB_WORKSPACE\android\app\google-services.json
                 echo "${{ secrets.FIREBASE_OPTIONS_DART_BASE64 }}" | base64 -d >  $GITHUB_WORKSPACE\lib\firebase_options.dart
                 echo "${{ secrets.STORAGE_RULES_BASE64 }}" | base64 -d >  $GITHUB_WORKSPACE\storage.rules
+            - name: Check created files
+              run: |
+                ls $GITHUB_WORKSPACE
+                ls $GITHUB_WORKSPACE\lib
             - name: Install dependencies
-              run: flutter pub get
+              run: |
+                cd $GITHUB_WORKSPACE
+                flutter pub get
             # TODO: Add decode keystore step
             - name: build APK
               run: flutter build apk --release
