--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ on:
             - test
 jobs:
     build:
-        name: Build & Release
-        runs-on: macos-latest # want to release iOS version too
+        name: Build & Release APK and AAB
+        runs-on: macos-latest # want to release iOS version too. unfortunately, it is impossible
         permissions:
           contents: write
         steps:
@@ -52,12 +52,6 @@ jobs:
               run: flutter build apk --release
             - name: build AAB
               run: flutter build appbundle
-            - name: build iOS
-              run: flutter build ipa --no-codesign
-            - name: Compress Archives and IPAs
-              run: |
-                cd build
-                tar -czf ios_build.tar.gz ios
             - name: Upload artifacts
               uses: actions/upload-artifact@v4
               with:
@@ -65,7 +59,6 @@ jobs:
                 path: |
                   build/app/outputs/flutter-apk/app-release.apk
                   build/app/outputs/bundle/release/app-release.aab
-                  build/ios_build.tar.gz
             - name: Extract version from pubspec.yaml
               id: extract_version
               run: |
