Try implement signing apk and aab

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,13 +56,36 @@ jobs:
               run: flutter build apk --release
             - name: build AAB
               run: flutter build appbundle  -release
-            - name: Upload artifacts
+            - name: Sign app APK
+              uses: r0adkll/sign-android-release@v1
+              # ID used to access action output
+              id: sign_app
+              with:
+                releaseDirectory: app/build/outputs/apk/release
+                signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+                alias: ${{ secrets.ALIAS }}
+                keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+                keyPassword: ${{ secrets.KEY_PASSWORD }}
+              env:
+                # override default build-tools version (33.0.0) -- optional
+                BUILD_TOOLS_VERSION: "34.0.0"
+              # Example use of `signedReleaseFile` output -- not needed
+            - name: Sign aab bundle
+              uses: roadkll/sign-android-release@v1
+              id: sign_aab
+              with:
+                releaseDirectory: build/app/outputs/flutter-apk
+                signingKeyBase64: ${{secrets.UPLOADKEYSTOREBASE64}}
+                alias: ${{secrets.UPLOAD_KEY_ALIAS}}
+                keyStorePassword: ${{secrets.UPLOAD_KEYSTORE_PASSWORD}}
+
+            - name: upload signed artifact
               uses: actions/upload-artifact@v4
               with:
-                name: Releases
-                path: |
-                  build/app/outputs/flutter-apk/app-release.apk
-                  build/app/outputs/bundle/release/app-release.aab
+                name: Signed releases
+                path: | 
+                    ${{steps.sign_app.outputs.signedReleaseFile0}}
+                    ${{steps.sign_app.outputs.signedReleaseFile1}}
             - name: Extract version from pubspec.yaml
               id: extract_version
               run: |
@@ -85,6 +108,6 @@ jobs:
             - name: Create Release
               uses: ncipollo/release-action@v1
               with:
-                artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab,build/ios_build.tar.gz"
+                artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab" # build/ios_build.tar.gz not included
                 tag: v${{ env.VERSION }}
                 token: ${{ secrets.GITHUB_TOKEN  }}
