Try fix signed output path references

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,14 +77,15 @@ jobs:
                 signingKeyBase64: ${{secrets.UPLOADKEYSTOREBASE64}}
                 alias: ${{secrets.UPLOAD_KEY_ALIAS}}
                 keyStorePassword: ${{secrets.UPLOAD_KEYSTORE_PASSWORD}}
-
+            - name: Debug file paths
+              run: ls -R build/app/outputs
             - name: upload signed artifact
               uses: actions/upload-artifact@v4
               with:
                 name: Signed releases
                 path: | 
-                    ${{steps.sign_app.outputs.signedReleaseFile0}}
-                    ${{steps.sign_app.outputs.signedReleaseFile1}}
+                    ${{steps.sign_app.outputs.signedReleaseFile}}
+                    ${{steps.sign_aab.outputs.signedReleaseFile}}
             - name: Extract version from pubspec.yaml
               id: extract_version
               run: |
