Removed pipe operator for single command blocks

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,13 +40,11 @@ jobs:
                 echo "${{ secrets.FIREBASE_OPTIONS_DART_BASE64 }}" | base64 -d >  $GITHUB_WORKSPACE/lib/firebase_options.dart
                 echo "${{ secrets.STORAGE_RULES_BASE64 }}" | base64 -d >  $GITHUB_WORKSPACE/storage.rules
             - name: Decode upload keystore
-              run: |
-                echo "$UPLOAD_KEYSTORE_BASE64" | base64 --decode > $GITHUB_WORKSPACE/secrets/upload_keystore_derdiedas.jks
+              run: echo "$UPLOAD_KEYSTORE_BASE64" | base64 --decode > $GITHUB_WORKSPACE/secrets/upload_keystore_derdiedas.jks
               env:
                 UPLOAD_KEYSTORE: ${{ secrets.UPLOAD_KEYSTORE_BASE64 }}
             - name: Decode key.properties
-              run: |
-                echo "$KEY_PROPERTIES" | base64 --decode > $GITHUB_WORKSPACE/android/key.properties
+              run: echo "$KEY_PROPERTIES" | base64 --decode > $GITHUB_WORKSPACE/android/key.properties
               env:
                 KEY_PROPERTIES: ${{ secrets.KEY_PROPERTIES }}
             - name: Check created files
