--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,17 +42,11 @@ jobs:
             - name: Decode upload keystore
               run: |
                 mkdir -p $GITHUB_WORKSPACE/secrets
-                echo "$UPLOAD_KEYSTORE_BASE64" >> $GITHUB_WORKSPACE/secrets/upload_keystore_derdiedas.jks.b64
-                base64 --decode $GITHUB_WORKSPACE/secrets/upload_keystore_derdiedas.jks.b64 > $GITHUB_WORKSPACE/secrets/upload_keystore_derdiedas.jks
-                shasum -a 256 $GITHUB_WORKSPACE/secrets/upload_keystore_derdiedas.jks
-              env:
-                UPLOAD_KEYSTORE: ${{ secrets.UPLOAD_KEYSTORE_BASE64 }}
+                echo "${{ secrets.UPLOAD_KEYSTORE_BASE64 }}" | base64 -d >  $GITHUB_WORKSPACE/secrets/upload_keystore_derdiedas.jks
             - name: Decode key.properties
               run: | 
                 echo "$KEY_PROPERTIES" >> $GITHUB_WORKSPACE/android/key.properties.base64
-                base64 --decode $GITHUB_WORKSPACE/android/key.properties.base64 > $GITHUB_WORKSPACE/android/key.properties
-              env:
-                KEY_PROPERTIES: ${{ secrets.KEY_PROPERTIES }}
+                echo "${{ secrets.KEY_PROPERTIES }}" | base64 -d > $GITHUB_WORKSPACE/android/key.properties
             - name: Check created files
               run: |
                 ls -l $GITHUB_WORKSPACE
