--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,7 +49,16 @@ android {
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            // Not signing with the debug keys anymore! so `flutter run --release` only works if
+            // proper key.properties (i.e. the required signing key) is provided. One can try
+            // an if statement like
+            /*
+            if (keystorePropertiesFile.exists()) {
+                signingConfig = signingConfigs.release
+            } else {
+                signingConfig = signingConfigs.debug
+            }
+             */
             signingConfig = signingConfigs.release
         }
     }
